fixed spacing issue portfolio

--- a/client/src/pages/Portfolio/Portfolio.css
+++ b/client/src/pages/Portfolio/Portfolio.css
@@ -39,4 +39,6 @@ body {
      padding-bottom: 20px;
      margin-left: 30px;
      text-decoration: underline;
+     margin-top: 10px;
+     margin-bottom: 10px;
    }
